<resources>
    <string name="app_name">Calculator_HW</string>
    <string name="expression">Expression shows here</string>
    <string name="result">Result shows here</string>
    <string name="plus">+</string>
    <string name="multiple">x</string>
    <string name="subtract">-</string>
    <string name="divid">/</string>
    <string name="equal">=</string>
    <string name="C">C</string>
    <string name="constract">+/-</string>
    <string name="dot">.</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
</resources>