<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:text="@string/expression"
            android:textSize="30dp"
            android:gravity="right"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:text="@string/result"
            android:textSize="40dp"
            android:gravity="right"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/gray"
                android:textColor="@color/black"
                android:onClick="onclick"
                android:layout_marginLeft="5dp"
                android:text="@string/C"
               />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/constract"
                android:backgroundTint="@color/gray"
                android:textColor="@color/black"
                android:layout_marginLeft="5dp"
                android:onClick="onclick"/>

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/divid"
                android:backgroundTint="@color/gray"
                android:textColor="@color/black"
                android:layout_marginLeft="5dp"
                android:onClick="onclick"/>

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/multiple"
                android:backgroundTint="@color/gray"
                android:layout_marginLeft="5dp"
                android:textColor="@color/black"
                android:onClick="onclick"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/gray"
                android:textColor="@color/black"
                android:text="@string/seven"
                android:layout_marginLeft="5dp"
                android:onClick="onclick"/>

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/eight"
                android:backgroundTint="@color/gray"
                android:textColor="@color/black"
                android:layout_marginLeft="5dp"
                android:onClick="onclick"/>

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nine"
                android:backgroundTint="@color/gray"
                android:textColor="@color/black"
                android:layout_marginLeft="5dp"
                android:onClick="onclick"/>

            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/subtract"
                android:backgroundTint="@color/gray"
                android:textColor="@color/black"
                android:layout_marginLeft="5dp"
                android:onClick="onclick"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/four"
                android:backgroundTint="@color/gray"
                android:textColor="@color/black"
                android:layout_marginLeft="5dp"
                android:onClick="onclick"/>

            <Button
                android:id="@+id/button14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/five"
                android:backgroundTint="@color/gray"
                android:textColor="@color/black"
                android:layout_marginLeft="5dp"
                android:onClick="onclick"/>

            <Button
                android:id="@+id/button16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/six"
                android:backgroundTint="@color/gray"
                android:textColor="@color/black"
                android:layout_marginLeft="5dp"
                android:onClick="onclick"/>

            <Button
                android:id="@+id/button15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/plus"
                android:backgroundTint="@color/gray"
                android:textColor="@color/black"
                android:layout_marginLeft="5dp"
                android:onClick="onclick"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="146dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="310dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/gray"
                        android:onClick="onclick"
                        android:text="@string/one"
                        android:textColor="@color/black" />

                    <Button
                        android:id="@+id/button21"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/gray"
                        android:onClick="onclick"
                        android:text="@string/two"
                        android:textColor="@color/black" />

                    <Button
                        android:id="@+id/button22"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/gray"
                        android:onClick="onclick"
                        android:text="@string/three"
                        android:textColor="@color/black" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="63dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button25"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/gray"
                        android:onClick="onclick"
                        android:text="@string/zero"
                        android:textColor="@color/black" />

                    <Button
                        android:id="@+id/button26"
                        android:layout_width="78dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/gray"
                        android:onClick="onclick"
                        android:text="@string/dot"
                        android:textColor="@color/black" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="96dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button24"
                    android:layout_width="107dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:backgroundTint="@color/gray"
                    android:onClick="onclick"
                    android:text="@string/equal"
                    android:textColor="@color/black" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>